implement the schedule functionality